--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>Git flow for code changes: stage > commit (with message) > pull in the main branch > push to the origin branch your new feature branch > Check in Github to confirm your branch is updated.</li>
         
         </ul>
       </section>
@@ -47,7 +48,8 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
         </ul>
       </section>
     </main>
