Added notes to git flow with bold type

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
         <ul>
           <li>git status: checks what branch we are currently on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
-          <li>Git flow for code changes: stage > commit (with message) > pull in the main branch > push to the origin branch your new feature branch > Check in Github to confirm your branch is updated.</li>
+          <li>Git Flow:
+            <br>
+            <strong>Add and commit your files</strong>, and make sure to include a commit message* <br>
+            git add -A <br>
+            git commit -m “updated project README file” <br><br>
+            <strong>Pull in the base branch, main.</strong> <br>
+            git pull origin main <br><br>
+            <strong>Push up your feature branch.</strong> <br>
+            git push origin feature/project-README.</li>
         
         </ul>
       </section>
