--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <section class="card" id="git-section">
         <h2>Git</h2>
         <ul>
-          <li>git status: checks what branch we are currently on</li>
+          <li>git status: checks what branch we are currently working on</li>
           <li>git checkout -b branch-name: creates a new branch and switches to it</li>
           <li>Git Flow:
             <br>
